update landing page - fixed social buttons overlapping

--- a/css/header.css
+++ b/css/header.css
@@ -89,7 +89,7 @@ header {
     }
     .navbar {
         background: rgba(0, 0, 0, 0.1);
-        backdrop-filter: blur(15px);
+        backdrop-filter: blur(50px);
     }
 }
 
@@ -102,7 +102,7 @@ header {
 
 .dropdown_menu {
     display: none;
-    position: absolute;
+    position: fixed;
     right: 2rem;
     top: 60px;
     width: unset;
