--- a/css/home.css
+++ b/css/home.css
@@ -8,6 +8,7 @@
 .home_content {
     max-width: 600px;
     z-index: 1;
+    margin-bottom: 10%;
 }
 
 .home_content h1 {
@@ -68,6 +69,7 @@
     width: 170px;
     display: flex;
     justify-content: space-between;
+    margin-top: 10%;
     z-index: 1;
 }
 
